<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops!</string>
    <string name="error_message">There was an error. Please try again!</string>
    <string name="error_ok">Okay</string>
    <string name="network_unavailable_message">Network isn\'t available!</string>
    <string name="default_temp">00</string>
    <string name="default_time">At %1$s will be</string>
    <string name="location">LOCATION</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">VALUE</string>
    <string name="precipitation">Rain or snow?</string>
    <!-- &#37; means % -->
    <string name="precip_value">%1$s%%</string>
    <string name="default_summay">Here is the place for the summay text</string>
</resources>
